--- a/src/TicTacToe.css
+++ b/src/TicTacToe.css
@@ -77,4 +77,13 @@ body {
     font-size: 24px;
     text-align: center;
   }
+
+  #resetBtn{
+    width: 150px;
+    border-radius: 8px;
+    height: 40px;
+    background-color: red;
+    color: #f3f2f2;
+    margin-top: 20px;
+  }
   
